[gd_scene load_steps=19 format=3 uid="uid://dgcl1g7oly7r2"]

[ext_resource type="PackedScene" uid="uid://bc5o83u5bleq8" path="res://FlappyBird/Pipe.tscn" id="1_1dy24"]
[ext_resource type="Script" uid="uid://dlsiackqh0ckd" path="res://FlappyBird/pipes.gd" id="1_13seu"]
[ext_resource type="Texture2D" uid="uid://bqi4yqo7apx60" path="res://FlappyBird/assets/coin-frame-1.png" id="2_gwybx"]
[ext_resource type="Texture2D" uid="uid://74d3fbhi3cq6" path="res://FlappyBird/assets/coin-frame-2.png" id="3_13seu"]
[ext_resource type="Texture2D" uid="uid://bdrfkuwohlhnr" path="res://FlappyBird/assets/coin-frame-3.png" id="4_3jwa1"]
[ext_resource type="Texture2D" uid="uid://bclxsfe34a3l5" path="res://FlappyBird/assets/coin-frame-4.png" id="5_n3vk6"]
[ext_resource type="Texture2D" uid="uid://tal3u5wn7brw" path="res://FlappyBird/assets/coin-frame-5.png" id="6_kod3h"]
[ext_resource type="Texture2D" uid="uid://br1xowqhhajfc" path="res://FlappyBird/assets/coin-frame-6.png" id="7_ltxhl"]
[ext_resource type="Texture2D" uid="uid://c60dmxo583vf4" path="res://FlappyBird/assets/coin-frame-7.png" id="8_s6hrg"]
[ext_resource type="Texture2D" uid="uid://cxsyfwq8auwfl" path="res://FlappyBird/assets/coin-frame-8.png" id="9_svhlo"]
[ext_resource type="Texture2D" uid="uid://byl6nyaotilxj" path="res://FlappyBird/assets/coin-frame-9.png" id="10_s2gjd"]
[ext_resource type="Texture2D" uid="uid://dck2kyh6f6kha" path="res://FlappyBird/assets/coin-frame-10.png" id="11_ikhbq"]
[ext_resource type="Texture2D" uid="uid://cftkkqh8uxju2" path="res://FlappyBird/assets/coin-frame-11.png" id="12_ictb5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1dy24"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gwybx")
}, {
"duration": 1.0,
"texture": ExtResource("3_13seu")
}, {
"duration": 1.0,
"texture": ExtResource("4_3jwa1")
}, {
"duration": 1.0,
"texture": ExtResource("5_n3vk6")
}, {
"duration": 1.0,
"texture": ExtResource("6_kod3h")
}, {
"duration": 1.0,
"texture": ExtResource("7_ltxhl")
}, {
"duration": 1.0,
"texture": ExtResource("8_s6hrg")
}, {
"duration": 1.0,
"texture": ExtResource("9_svhlo")
}, {
"duration": 1.0,
"texture": ExtResource("10_s2gjd")
}, {
"duration": 1.0,
"texture": ExtResource("11_ikhbq")
}, {
"duration": 1.0,
"texture": ExtResource("12_ictb5")
}],
"loop": true,
"name": &"coin_anim",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gwybx"]
radius = 15.0333

[sub_resource type="Animation" id="Animation_13seu"]
resource_name = "coin"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3jwa1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3, 0.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jwa1"]
_data = {
&"RESET": SubResource("Animation_3jwa1"),
&"coin": SubResource("Animation_13seu")
}

[node name="Pipes" type="Node2D"]
script = ExtResource("1_13seu")

[node name="Pipe" parent="." instance=ExtResource("1_1dy24")]
position = Vector2(0, 90)

[node name="Pipe2" parent="." instance=ExtResource("1_1dy24")]
position = Vector2(0, -90)
rotation = 3.14159

[node name="Coin" type="Area2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Coin"]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_1dy24")
animation = &"coin_anim"
autoplay = "coin_anim"
frame_progress = 0.749728

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin"]
shape = SubResource("CircleShape2D_gwybx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Coin"]
libraries = {
&"": SubResource("AnimationLibrary_3jwa1")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(40, 0)

[connection signal="body_entered" from="Pipe" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Pipe2" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Coin" to="." method="_on_coin_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
